--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/pro-layout": "^4.5.9",
     "@antv/data-set": "^0.10.2",
     "@sentry/browser": "^5.9.1",
